SAI-73 SAI-167 Still investigating a unix issue